# IRONFORGE

./: .augmentignore  .claudeignore  .commitlintrc.cjs  .gitignore  .gitmessage  .mcp.json  .pre-commit-config.yaml  AGENT_FACTORY_INTEGRATION_COMPLETE.md  BENCHMARK_COMPARISON.md  BMAD_ENHANCED_ARCHAEOLOGICAL_DAG_WEIGHTING_VALIDATION_FRAMEWORK.md  BROAD_SPECTRUM_ARCHAEOLOGY_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CURSOR_DOCUMENTATION_COMMANDS.md  CURSOR_DOCUMENTATION_OVERHAUL_PROMPT.md  Claude's_plan_1  DOC_AUDIT_REPORT.md  DOC_VALIDATION_REPORT.md  EXECUTIVE_BRIEF_NEWS_CLUSTERING.md  EXPERIMENT_E123_COMPLETE.md  FEATURES.md  GRAPH_BUILDER_REFACTOR_SUMMARY.md  HIERARCHICAL_LINK_DETECTION.md  IRONFORGE_Experimental_Portfolio_Report.md  IRONFORGE_HTF_Analysis_Breakthrough_Documentation.md  IRONFORGE_Inter_Day_Cascade_Intelligence_Report.md  IRONFORGE_SDK_MISSION_ACCOMPLISHED.md  IRONFORGE_SDK_USAGE_GUIDE.md  JSON_SERIALIZATION_FIX_SUMMARY.md  Makefile  NEW_INTERNAL_IMPORTS.md  OPTIMIZATION_DIFFS.md  ORACLE_REFACTOR_SUMMARY.md  PATTERN_ANALYSIS_GUIDE.md  PHASE2_DECONTAMINATION_COMPLETE.md  PHASE5_TGAT_DISCOVERY_ENGINE_RESTORATION_COMPLETE.md  PRE_MERGE_VALIDATION_RESOLUTION.md  PRICE_RELATIVITY_TRANSFORMATION_SUMMARY.md  QUICK_REFERENCE.md  (+229 more)
.claude/: enhanced_session_adapter_architecture.md  enhanced_session_adapter_discovery_links.md  enhanced_session_adapter_integration_guide.md  ironforge_architecture.md  ironforge_knowledge_base_update.md
.githooks/: check-ironforge.sh  pre-commit  pre-commit-research-framework
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE_RC.md  claude-code-review.yml  release-drafter.yml
.ipynb_checkpoints/: predictive_condition_explorer-checkpoint.ipynb
.ironforge/: TEAM_RESEARCH_FRAMEWORK_GUIDE.md  research_framework_compliance_report.md  research_framework_validator.py
IRONFORGE/: contracts.py
adapted_enhanced_sessions/: adapted_enhanced_rel_ASIA_Lvl-1_2025_07_29.json  adapted_enhanced_rel_ASIA_Lvl-1_2025_07_30.json  adapted_enhanced_rel_ASIA_Lvl-1_2025_08_07.json  adapted_enhanced_rel_LONDON_Lvl-1_2025_07_24.json  adapted_enhanced_rel_LONDON_Lvl-1_2025_07_28.json  adapted_enhanced_rel_LONDON_Lvl-1_2025_07_30.json  adapted_enhanced_rel_LONDON_Lvl-1_2025_07_31.json  adapted_enhanced_rel_LONDON_Lvl-1_2025_08_06.json  adapted_enhanced_rel_LUNCH_Lvl-1_2025_07_24.json  adapted_enhanced_rel_LUNCH_Lvl-1_2025_07_30.json  adapted_enhanced_rel_LUNCH_Lvl-1_2025_08_05.json  adapted_enhanced_rel_MIDNIGHT_Lvl-1_2025_07_25.json  adapted_enhanced_rel_MIDNIGHT_Lvl-1_2025_07_28.json  adapted_enhanced_rel_MIDNIGHT_Lvl-1_2025_07_30.json  adapted_enhanced_rel_NYAM_Lvl-1_2025_08_07_FRESH.json  adapted_enhanced_rel_NYPM_Lvl-1_2025_08_06.json  adapted_enhanced_rel_NY_AM_Lvl-1_2025_07_24.json  adapted_enhanced_rel_NY_AM_Lvl-1_2025_07_28.json  adapted_enhanced_rel_NY_AM_Lvl-1_2025_07_30.json  adapted_enhanced_rel_NY_AM_Lvl-1_2025_07_31.json  adapted_enhanced_rel_NY_PM_Lvl-1_2025_07_28.json  adapted_enhanced_rel_NY_PM_Lvl-1_2025_08_04.json  adapted_enhanced_rel_NY_PM_Lvl-1_2025_08_05.json  adapted_enhanced_rel_PREMARKET_Lvl-1_2025_07_24.json  adapted_enhanced_rel_PREMARKET_Lvl-1_2025_07_28.json  adapted_enhanced_rel_PREMARKET_Lvl-1_2025_07_29.json  adapted_enhanced_rel_PREMARKET_Lvl-1_2025_08_05.json
agents/: CLAUDE.md  README.md
analysis/: archaeological_zone_theory_analysis.md  broad_spectrum_archaeology.py  convergence_node_deep_dive.py  enhanced_session_adapter.py  event_classifier.py  liquidity_event_detector.py  liquidity_events_analysis.json  market_structure_intelligence_report.md  microstructure_patterns_14_35_analysis.md  multi_timeframe_convergence_analyzer.py  pm_blast_radius_analyzer.py  pm_event_scanner.py  pm_pattern_discoverer.py  range_confluence_analysis.json  range_filter_analysis.json  realtime_recognition.py  semantic_market_events_analyzer.py  tactical_framework.py  timeframe_lattice_mapper.py  top_convergence_nodes.json
archaeological_analysis/: 40_PERCENT_LIQUIDITY_PROGRESSION_HYPOTHESIS.md  CLAUDE.md  DAILY_TIMEFRAME_ARCHAEOLOGICAL_EXPERIMENT_RESULTS.md  daily_temporal_non_locality_hypothesis.py  daily_timeframe_archaeological_analyzer.py  htf_archaeological_zone_amplifier.py  inter_day_archaeological_zone_investigator.py  temporal_non_locality_hypothesis_h1.py
artifacts/: calendar_qa.md  hypotheses.md
cascade_discovery_results/: cascade_event_discovery_results_20250825_162422.json  cascade_event_discovery_results_20250825_162450.json  cascade_event_discovery_results_20250825_162854.json  cascade_event_discovery_results_20250825_163020.json
configs/: ab_test_baseline.yml  ab_test_enhanced.yml  archaeological_graduation_enhanced.yml  dev.yml  htf_config.yml  nq_m5.yml  run.local.yaml
context_helpers/: arch_analyzer.sh  bug_hunter.sh  save_reports.sh  workflow_helper.sh
context_reports/: bug_report_20250828_2004.md
data/: inter_day_reaction_analysis.json
data_migration/: batch_migrate_graphs.py  schema_normalizer.py  test_schema_migration.py
deliverables/: bridge_analysis_results.json  enrichment_analysis_results.json
demo_run_output/: session_fingerprint.json
discoveries/: discovery_session_10_discoveries.json  discovery_session_14_discoveries.json  discovery_session_16_discoveries.json  (+11 more)
docs/: 01-QUICKSTART.md  (+60 more)
iron_core/: README.md  __init__.py  py.typed  pyproject.toml  setup.py  test_thread_safety.py
iron_core/integration/: __init__.py
iron_core/iron_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iron_core/mathematical/: __init__.py  adaptive_rg_optimizer.py  cascade_classifier.py  constraints.py  fisher_information_monitor.py  grammar_fisher_correlator.py  hawkes_engine.py  invariants.py  mathematical_hooks.py  rg_scaler_production.py  scaling_patterns.py  temporal_correlator.py
iron_core/mathematical/mathematical_layers/: __init__.py  api_interface.py  core_algorithms.py  integration_layer.py  theory_abstraction.py  validation_framework.py
iron_core/performance/: __init__.py  container.py  lazy_loader.py
iron_core/validation/: __init__.py
(+2442 files in other folders)
